<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">水果君</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="login_username_hint">请输入用户名&#8230;</string>
    <string name="login_password_hint">请输入密码&#8230;</string>
    <string name="login_email_hint">请在此输入密码&#8230;</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_txt1">还没有账号？</string>
    <string name="register_txt2">立即注册 ></string>
    <string name="login_account">账号 </string>
    <string name="login_pwd">密码 </string>
    <string name="login_email">确认密码 </string>
    <string name="message_search_hint">搜索&#8230;</string>
    <string name="main_tab_recent">会话</string>
    <string name="main_tab_contact">联系人</string>
    <string name="mian_tab_set">设置</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="add_avator">头像</string>
    <string name="add_nick">昵称</string>
    <string name="add_name">账号</string>
    <string name="add_name_hint">请输入昵称&#8230;</string>
    <string name="add_gender">性别</string>
    <string name="set_notify">接收新消息通知</string>
    <string name="set_myinfo">个人资料</string>
    <string name="set_blacklist">黑名单</string>
    <string name="set_voice">声音</string>
    <string name="set_vibrate">震动</string>
    <string name="tips">提示</string>
    <string name="logout">退出登陆</string>
    <string name="pop_photo">拍照</string>
    <string name="pop_choose">从手机相册选中</string>
    <string name="network_tips">当前网络不可用,请检查您的网络!</string>
    <string name="toast_error_password_null">密码不能为空</string>
    <string name="toast_error_username_null">用户名不能为空</string>
    <string name="toast_error_comfirm_password">输入的两次密码不一致</string>
    <string name="blacklist">黑名单</string>
    <string name="chat">发起会话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="location_title">切换地址</string>
    <string name="location_1">当前位置</string>
    <string name="location_2">热门城市</string>
    <string name="location_3">省市列表</string>
    <string name="location_tj">天津市</string>
    <string name="re_back">返回上一层</string>
    <string name="order_edit_1">订单内容</string>
    <string name="order_edit_2">订单内容：</string>
    <string name="order_edit_3">订单金额：</string>
    <string name="order_edit_4">订单状态：</string>
    <string name="order_edit_5">送货方式：</string>
    <string name="order_edit_7">收货地址：</string>
    <string name="order_edit_8">订单留言：</string>
    <string name="order_edit_9">提交订单</string>
    <string name="order_edit_method1">送货上门</string>
    <string name="address_1">收货人姓名</string>
    <string name="address_2">手机号</string>
    <string name="address_3">学校</string>
    <string name="address_4">详细地址</string>
    <string name="address_5">完成</string>
    <string name="title_activity_pay_result">PayResultActivity</string>

</resources>
