<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:id="@+id/order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <include
            android:id="@+id/common_actionbar"
            layout="@layout/include_action_bar" />

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@color/view_grap_gray"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/order_edit_1"
                    android:textColor="@color/text_color_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp" >

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/order_edit_2"
                        android:textColor="@color/text_color_gray"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/order_edit_content"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="0dp"
                        android:layout_marginStart="20dp"
                        android:textColor="@color/text_color_gray"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:background="@color/line_color_gray" >
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp" >

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/order_edit_3"
                        android:textColor="@color/text_color_gray"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/order_edit_price"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="0dp"
                        android:layout_marginStart="20dp"
                        android:text="￥0.0"
                        android:textColor="@color/text_color_orange"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:background="@color/line_color_gray" >
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp" >

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/order_edit_5"
                        android:textColor="@color/text_color_gray"
                        android:textSize="14sp" />

                        <!--送货方式不可选 android:onClick="send_method" -->
                    <TextView
                        android:id="@+id/order_edit_method"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="0dp"
                        android:layout_marginStart="20dp"
                        android:clickable="true"
                        android:text="@string/order_edit_method1"
                        android:textColor="@color/text_color_gray"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:background="@color/line_color_gray" >
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp" >

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="收货口令："
                        android:textColor="@color/text_color_gray"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/order_edit_name"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="0dp"
                        android:layout_marginStart="20dp"
                        android:clickable="true"
                        android:onClick="order_name"
                        android:text="你的名字"
                        android:textColor="@color/text_color_gray"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:background="@color/line_color_gray" >
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp" >

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="联系电话："
                        android:textColor="@color/text_color_gray"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/order_edit_phone"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="0dp"
                        android:layout_marginStart="20dp"
                        android:clickable="true"
                        android:onClick="order_phone"
                        android:textColor="@color/text_color_gray"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:background="@color/line_color_gray" >
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp" >

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/order_edit_7"
                        android:textColor="@color/text_color_gray"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/order_edit_address"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="0dp"
                        android:layout_marginStart="20dp"
                        android:clickable="true"
                        android:onClick="order_address"
                        android:textColor="@color/text_color_gray"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:background="@color/line_color_gray" >
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp" >

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/order_edit_8"
                        android:textColor="@color/text_color_gray"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/order_edit_words"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="0dp"
                        android:layout_marginStart="20dp"
                        android:clickable="true"
                        android:onClick="order_words"
                        android:textColor="@color/text_color_gray"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:background="@color/line_color_gray" >
                </LinearLayout>

                <Button
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center|center_horizontal"
                    android:layout_marginTop="40dp"
                    android:background="@color/bg_color_green"
                    android:onClick="submit_order"
                    android:text="@string/order_edit_9"
                    android:textColor="@color/base_color_white"
                    android:textSize="18sp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    
    
    
    
    
    
    
    
    
    
    
    
    
   <RelativeLayout 
	    android:id="@+id/pay"
	    android:visibility="gone"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

	    <TextView
	        android:id="@+id/price"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBottom="@+id/textView1"
	        android:layout_centerHorizontal="true"
	        android:text="2333.0"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textColor="@color/base_color_red"
	        android:textSize="40sp" />
	
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_marginTop="70dp"
	        android:layout_toRightOf="@+id/price"
	        android:textColor="@color/base_color_red"
	        android:text="大洋" />
	
	    <TextView
	        android:id="@+id/pay3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/price"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="20dp"
	        android:drawableTop="@drawable/pay3"
	        android:gravity="center"
	        android:text="货到付款" />
	
	    <Button
	        android:id="@+id/cancel"
	        android:layout_width="180dp"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_below="@+id/pay1"
	        android:layout_marginTop="26dp"
	        android:background="@color/base_color_blue"
	        android:text="删除订单"
	        android:textColor="@color/base_color_white"
	        android:textSize="22sp" />
	
	    <TextView
	        android:id="@+id/pay2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/pay1"
	        android:layout_alignBottom="@+id/pay1"
	        android:layout_toRightOf="@+id/pay3"
	        android:drawableTop="@drawable/pay2"
	        android:gravity="center"
	        android:text="微信支付" />

	    <TextView
	        android:id="@+id/pay1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/pay3"
	        android:layout_marginTop="12dp"
	        android:layout_toLeftOf="@+id/pay3"
	        android:drawableTop="@drawable/pay1"
	        android:gravity="center"
	        android:text="支付宝" />

</RelativeLayout>
    
    

</LinearLayout>